# rust-vk

./: Cargo.toml  generate-mesh.js  pipeline.scene
assets/: BoomBoxWithAxes.gltf  scene.yaml
src/: ecs.rs  error.rs  globals.rs  init.rs  main.rs  math.rs  render_graph.rs  renderer.rs  resources.rs
src/device/: buffer.rs  command_buffer.rs  descriptor_set.rs  descriptor_set_layout.rs  fence.rs  image.rs  image_view.rs  memory.rs  mod.rs  pipeline.rs  raw_handle.rs  sampler.rs  semaphore.rs
src/resources/: mesh.rs  mod.rs  shader.rs  texture.rs
src/scene/: camera.rs  definition.rs  material.rs  mod.rs
src/scene/textures/: ktx.rs  mod.rs  png.rs
