[package]
name = "rust-vk"
version = "0.1.0"
authors = ["Simon Buchan <simon.buchan@skilitics.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.31"
png = "0.16"
shaderc = "0.6"
winit = "0.22"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
notify = "4"
